--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^16.9.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "typescript": "^4.1.3"
   },
   "scripts": {
@@ -41,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/react-redux": "^7.1.16",
+    "@types/redux": "^3.6.0"
+  }
 }
