--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.16",
-    "@types/redux": "^3.6.0"
+    "@types/redux": "^3.6.0",
+    "@types/uuid": "^8.3.0"
   }
 }
